Update anchor styling in main.css fixing some layout problems

--- a/mainpage/main.css
+++ b/mainpage/main.css
@@ -46,9 +46,10 @@ body {
 }
 
 .anchor {
-    width: 10rem;
+    width: auto;
     display: flex;
     flex-direction: column;
+    position: relative;
     align-items: center;
     justify-content: center;
     text-decoration: none;
@@ -236,8 +237,8 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 20.1vw;
-    width: 20vw;
+    bottom: 0;
+    right: 0;
     background-color: rgba(0,0,0,0.3);
     transition: background-color 0.5s;
 }
